I fixed in newbranch

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -13,5 +13,9 @@
         <br><br>
         <input type="submit" value="Submit">
     </form>    
+    <div>
+        I hello
+        <h1>Helloword</h1>
+    </div>
 </body>
 </html>
